--- a/client/main.css
+++ b/client/main.css
@@ -33,7 +33,7 @@
 }
 
 .hide{
-  display: none;
+  visibility: hidden;
 }
 /*Navbar --------------------------------------------------------------------*/
 .perfil{
