--- a/client/main.css
+++ b/client/main.css
@@ -55,7 +55,9 @@
   text-decoration: none !important;
   color: #706F73;
 }
-
+.signIn{
+  float: right;
+}
 
 /*HomePage --------------------------------------------------------------------*/
 .bigCooky{
