--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,5 @@
 
+/*Me gusta mucho que comentes el css pues hay un orden muy claro*/
 /*General styling*/
 .head{
   font-family: 'Quicksand', sans-serif;
