--- a/client/main.css
+++ b/client/main.css
@@ -35,6 +35,10 @@
 .hide{
   visibility: hidden;
 }
+
+.right{
+  float: right;
+}
 /*Navbar --------------------------------------------------------------------*/
 .perfil{
   float: right;
