--- a/client/main.css
+++ b/client/main.css
@@ -13,7 +13,7 @@
 }
 
 a {
-    color: #777777 !important;
+    color: rgb(51,51,51) !important;
     text-decoration: none;
 }
 
@@ -57,7 +57,6 @@ a {
   padding: 10px 15px 20px;
 }
 
-
 #login-buttons .login-button, .accounts-dialog .login-button {
     cursor: pointer;
     -webkit-user-select: none;
@@ -80,8 +79,6 @@ a {
 .signIn{
   float: right !important;
 }
-
-
 
 /*HomePage --------------------------------------------------------------------*/
 .bigCooky{
