--- a/client/main.css
+++ b/client/main.css
@@ -110,3 +110,12 @@ a {
 .trsh{
   padding-top: 0em;
 }
+.Enter{
+  float: left;
+}
+.Enter2{
+  position: relative;
+  bottom: 0.5em;
+}
+.inputEnter{
+}
